# SmartCurtain-Backend

./: Makefile
.github/workflows/: UpdateParent.yaml  UpdateParentsSubmodule.yaml
Backend/Server/Root/api/v1_0/curtains/curtain_id/events/new/: __init__.py
DB/: CreateDB.py  Schema.sql
DB/Data/: Homes.json  Options.json
DB/Validation/: Curtains.json  CurtainsEvents.json  Homes.json  HomesEvents.json  Options.json  Rooms.json  RoomsEvents.json
Source/: Backend.py  Dockerfile  Requirements.txt  pyproject.toml
Source/MQTT/: __init__.py
Source/Manager/: AdafruitFeed.py
Source/Server/: Server.py  __init__.py
Source/Server/Routes/: __init__.py
Source/Server/Routes/curtains/: __init__.py
Source/SmartCurtain/: Area.py  AreaEvent.py  AreaOption.py  Curtain.py  Home.py  Option.py  Room.py  __init__.py
Source/SmartCurtain/DB/: DBFunctions.py  __init__.py
Source/Utility/: LookupStruct.py  __init__.py
