[build-system]
requires = [
	"astral==1.10.1",
	"mpzinke>=0.7.5",
	"paho-mqtt>=1.6.1",
	"pymongo>=4.5.0",
	"requests>=2.28.1"
]
build-backend = "setuptools.build_meta"


[project]
name = "SmartCurtain-Backend"
version = "0.9.0"
authors = [{name="Mathew Zinke"}]
description = """The backend for SmartCurtain, a program to automate curtains."""
dependencies = [
	"astral==1.10.1",
	"mpzinke>=0.7.5",
	"paho-mqtt>=1.6.1",
	"pymongo>=4.5.0",
	"requests>=2.28.1"
]
readme = "../README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MPZinke/SmartCurtain-Backend"
"Bug Tracker" = "https://github.com/MPZinke/SmartCurtain-Backend/issues"
